force-app/main/default/objects/BrillioFC__Unused_Report__c/BrillioFC__Unused_Report__c.object-meta.xml
<CustomObject>
    <label>Unused Report</label>
    <nameField>
        <label>Unused Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unused Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>