force-app/main/default/objects/BrillioFC__Unused_Report__c/fields/BrillioFC__Description__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>