force-app/main/default/objects/BrillioFC__Unused_Report__c/fields/BrillioFC__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>