force-app/main/default/objects/BrillioFC__Unused_Report__c/fields/BrillioFC__Format__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Format__c</fullName>
    <label>Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>