force-app/main/default/objects/BrillioFC__Unused_Report__c/fields/BrillioFC__LastRunDateTime__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__LastRunDateTime__c</fullName>
    <label>LastRunDateTime</label>
    <type>DateTime</type>
</CustomField>