force-app/main/default/objects/BrillioFC__Unused_Report__c/fields/BrillioFC__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>